--- a/style.css
+++ b/style.css
@@ -3,3 +3,40 @@ body {
   height: 100%;
   margin: 0;
 }
+
+h1 { 
+  text-align: center;
+}
+
+figure {
+  text-align: center;
+}
+
+
+nav {
+  text-align: center;
+
+}
+
+nav a {
+   background-color: grey;
+   padding-right: 10px; 
+   padding-left: 10px; }
+
+#featured-property p {
+    
+    
+   text-align: center;
+   width: 800px;
+   margin-left: auto;
+   margin-right: auto; 
+  
+   }
+
+   #details div {
+    display: block;
+    float: left;
+    background-color: rgb(255,0,0);
+    width: 25%;
+    text-align: center;
+  }
